Fixed dark mode issue and got rid of coin hyperlink color/underline

--- a/App/src/App.css
+++ b/App/src/App.css
@@ -30,7 +30,6 @@
   .dark-mode {
 	background-color: #1a1919;
 	color: #999;
-	height: 100%;
 	transition: background-color 0.25s ease-in-out;
   }
   
