--- a/App/src/components/Api/Coin.css
+++ b/App/src/components/Api/Coin.css
@@ -76,7 +76,10 @@
 	padding-left: 10px;
 }
 
-
+.individual-coin{
+	color: inherit;
+    text-decoration: none;
+}
 
 
 
